# kscreenshot

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md
examples/: capture_cursor_window_visible.rs  capture_primary_screen.rs  display_diagnostics.rs  window_hover_diagnostics.rs
src/: capture.rs  color.rs  com.rs  d3d11.rs  display.rs  error.rs  lib.rs  manager.rs  types.rs  window.rs
